# game-of-life

./: .gitignore  CMakeLists.txt  README.md
dream/: CMakeLists.txt
dream/include/dream/: Log.h
dream/src/: Log.cpp
game/: CMakeLists.txt
game/assets/: icon.aseprite
game/include/: Application.h  Cell.h
game/osx/: Icon.icns
game/src/: Application.cpp  Cell.cpp  main.cpp
